[package]
name = "conrod"
version = "0.62.0"
authors = [
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "DEPRECATED. See `conrod-core`."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "https://docs.rs/conrod_core/latest"
categories = ["gui"]
